--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
 <body>
     <nav>
 
-        <div class="nav_images">
+        <div class="nav_image_box">
             <!-- Add som images -->
             <!-- <img src="images/bg_20.jpg" alt="This is a nice image"> -->
 
-
-
-            <img src="images/bg_20.jpg" alt="" style="width:100px">
-            <img src="images/bg_23.jpg" alt="" style="width:100px">
-            <img src="images/bg_27.jpg" alt="" style="width:100px">
-            <img src="images/bg_29.jpg" alt="" style="width:100px">
+            <div class="nav_image"><img src="images/bg_20.jpg" alt="" style="width:100px"></div>
+            <div class="nav_image"><img src="images/bg_23.jpg" alt="" style="width:100px"></div>
+            <div class="nav_image"><img src="images/bg_27.jpg" alt="" style="width:100px"></div>
+            <div class="nav_image"><img src="images/bg_29.jpg" alt="" style="width:100px"></div>
 
 
         </div>
@@ -43,11 +41,10 @@
             <p>This is a paragraph</p>
 
 
-
-
-
+            <p>
             This is some text inside a div
             This text should be centered with some nice padding for readability. 
+            </p>
 
             <div class="image_container" style="text-align:center;padding:100px">
                 <img src="images/bg_20.jpg" alt="This is caption", width="100">
