--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="nav_items">
             <!-- Add som nav items -->
-            <a href="">link1</a>
+            <a href="./projects.html">Projects</a>
             <a href="">link2</a>
             <a href="">link3</a>
 
